--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <h2>Links</h2>
 
-        <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjw_4GY5Or9AhWWq5UCHcDUCtAQPAgI">Clique aqui para ir para o site do google</a>
+        <a href="https://www.google.com/">Clique aqui para ir para o site do google</a>
         <p>Vamos para a <a href="tabela.html">Página 1?</a></p>
         <p>Vamos para a <a href="formulario.html">Página 2?</a></p>
 
